colecciones en menus

--- a/infobox.html
+++ b/infobox.html
@@ -97,9 +97,9 @@
                     <!-- <li class="nav-item">
                         <a id="public_Estadisticas" class="nav-link" @*href="~/Data/Estadisticas"*@ href="/Data/paginaBusqueda?id=Chile" style="color:#fff;">ESTADÍSTICAS</a>
                     </li> -->
-                    <!-- <li class="nav-item">
-                        <a id="public_Colecciones" class="nav-link" href="~/Data/ColeccionesSalud" style="color:#fff;">COLECCIONES</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a id="public_Colecciones" class="nav-link" href="/Colecciones/coleccionSalud.html" style="color:#fff;">COLECCIONES</a>
+                    </li>
                     <!--SEMANARIOS-->
                     <li class="nav-item">
                         <a id="public_semanario" class="nav-link" href="/semanrios.html" style="color:#fff;">SEMANARIOS</a>
