--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicons -->
+    <link href="/Assets/favicon/Icono_dataIntelligence_Rojo.png" rel="icon">
+    <link href="/Assets/favicon/Icono_dataIntelligence_Rojo.png" rel="apple-touch-icon">
     <title> DATA INTELLIGENCE - HOME</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="~/Images/favicons/data_intelligence.png">
