--- a/Colecciones/ingresoHistorico.html
+++ b/Colecciones/ingresoHistorico.html
@@ -184,13 +184,13 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesEconomia" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/economia.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/economia_grande.png" alt="Botón Economía" />
                                     <span class="lispancolecciones">Economía</span>
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesAgencia" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/agenciDI.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/boton_agenciaDI.png" alt="Botón Agencia DI" />
                                     <span class="lispancolecciones">Agencia DI</span>
                                 </a>
@@ -282,13 +282,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="~/Data/ColeccionesEconomia" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/economia.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/economia_grande.png" alt="Botón Economía" />
                                                 Economía
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="~/Data/ColeccionesAgencia" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/agenciDI.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/boton_agenciaDI.png" alt="Botón Agencia DI" />
                                                 Agencia DI
                                             </a>
