--- a/Colecciones/agenciDI.html
+++ b/Colecciones/agenciDI.html
@@ -180,13 +180,13 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="/Colecciones/economia.html" class="nav-link px-2 text-truncate liacolecciones active3">
+                                <a href="/Colecciones/economia.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/economia_grande.png" alt="Botón Economía" />
                                     <span class="lispancolecciones">Economía</span>
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="/Colecciones/agenciDI.html" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/agenciDI.html" class="nav-link px-2 text-truncate liacolecciones active3">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/boton_agenciaDI.png" alt="Botón Agencia DI" />
                                     <span class="lispancolecciones">Agencia DI</span>
                                 </a>
@@ -273,13 +273,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="/Colecciones/economia.html" class="dropdown-item btn btn-light ddhcolecciones active3">
+                                            <a href="/Colecciones/economia.html" class="dropdown-item btn btn-light ddhcolecciones ">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/economia_grande.png" alt="Botón Economía" />
                                                 Economía
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="/Colecciones/agenciDI.html" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/agenciDI.html" class="dropdown-item btn btn-light ddhcolecciones active3">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/boton_agenciaDI.png" alt="Botón Agencia DI" />
                                                 Agencia DI
                                             </a>
