--- a/Colecciones/economia.html
+++ b/Colecciones/economia.html
@@ -192,13 +192,13 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesAgricultura" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/agricultura.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/coleccion_agricultura.png" alt="Botón Agricultura" />
                                     <span class="lispancolecciones">Agricultura</span>
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesViolenciaMujer" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/violenciaMujer.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/violenciacontralamujer.png" alt="Botón Violencia" />
                                     <span class="lispancolecciones">Violencia Contra la Mujer </span>
                                 </a>
@@ -285,13 +285,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="~/Data/ColeccionesAgricultura" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/agricultura.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/coleccion_agricultura.png" alt="Botón Agricultura" />
                                                 Agricultura
                                             </a>
                                         </li>
                                         <li style="border-bottom:1px solid #d1d3de">
-                                            <a href="~/Data/ColeccionesViolenciaMujer" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/violenciaMujer.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/violenciacontralamujer.png" alt="Botón Violencia" />
                                                 Violencia Contra la Mujer
                                             </a>
