--- a/Colecciones/agenciDI.html
+++ b/Colecciones/agenciDI.html
@@ -204,13 +204,13 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesGlaciares_R10" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/glaciares.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/glaciar_grande.png" alt="Botón Glaciares" />
                                     <span class="lispancolecciones">Glaciares Región de Los Lagos</span>
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesIncendios" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/glaciares.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/focodefuego_grande.png" alt="Botón Incendios" />
                                     <span class="lispancolecciones">Incendios</span>
                                 </a>
@@ -297,13 +297,13 @@
                                             </a>
                                         </li>
                                         <li style="border-bottom:1px solid #d1d3de">
-                                            <a href="~/Data/ColeccionesGlaciares_R10" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/glaciares.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/glaciar_grande.png" alt="Botón Glaciares" />
                                                 Glaciares Región de Los Lagos
                                             </a>
                                         </li>
                                         <li style="border-bottom:1px solid #d1d3de">
-                                            <a href="~/Data/ColeccionesIncendios" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/incendios.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/focodefuego_grande.png" alt="Botón Incendios" />
                                                 Incendios
                                             </a>
