--- a/Colecciones/agricultura.html
+++ b/Colecciones/agricultura.html
@@ -222,7 +222,7 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesEducacion" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/educacion.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/coleccionEducacion.png" alt="Botón Incendios" />
                                     <span class="lispancolecciones">Educación</span>
                                 </a>
@@ -315,7 +315,7 @@
                                             </a>
                                         </li>
                                         <li style="border-bottom:1px solid #d1d3de">
-                                            <a href="~/Data/ColeccionesEducacion" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/educacion.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/coleccionEducacion.png" alt="Botón Incendios" />
                                                 Educación
                                             </a>
