--- a/Colecciones/municipios.html
+++ b/Colecciones/municipios.html
@@ -232,7 +232,7 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionesCiudades" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/ciudades.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/ciudades_azul.png" alt="Botón Incendios" />
                                     <span class="lispancolecciones">Ciudades</span>
                                 </a>
@@ -325,7 +325,7 @@
                                             </a>
                                         </li>
                                         <li style="border-bottom:1px solid #d1d3de">
-                                            <a href="~/Data/ColeccionesCiudades" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/ciudades.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/ciudades_azul.png" alt="Botón Incendios" />
                                                 Ciudades
                                             </a>
