terminado  menos  gestion municipal

--- a/Colecciones/agenciDI.html
+++ b/Colecciones/agenciDI.html
@@ -236,7 +236,7 @@
                        
     
                             <li class="licolecciones">
-                                <a href="~/Data/EducacionSuperior" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/elijoFacil.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/ElijoFacil_azul_chico.png" alt="Botón Educación" />
                                     <span class="lispancolecciones">Elijo fácil: Educacion Superior</span>
                                 </a>
