--- a/Colecciones/ciudades.html
+++ b/Colecciones/ciudades.html
@@ -248,7 +248,7 @@
                                 </a>
                             </li>
                             <li class="licolecciones">
-                                <a href="~/Data/ColeccionGobiernos_Regionales" class="nav-link px-2 text-truncate liacolecciones">
+                                <a href="/Colecciones/gobiernosRegionales.html" class="nav-link px-2 text-truncate liacolecciones">
                                     <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/GobiernosRegionales_chico.png" alt="Gobiernos Regionales" />
                                     <span class="lispancolecciones">Gobiernos Regionales</span>
                                 </a>
@@ -341,7 +341,7 @@
                                             </a>
                                         </li>
                                         <li style="border-bottom:1px solid #d1d3de">
-                                            <a href="~/Data/ColeccionGobiernos_Regionales" class="dropdown-item btn btn-light ddhcolecciones">
+                                            <a href="/Colecciones/gobiernosRegionales.html" class="dropdown-item btn btn-light ddhcolecciones">
                                                 <img class="img-fluid icolecciones" src="/Assets/IconBotonesColecciones/GobiernosRegionales_chico.png" alt="Gobiernos Regionales" />
                                                 Gobiernos Regionales
                                             </a>
