--- a/Colecciones/ingresoHistorico.html
+++ b/Colecciones/ingresoHistorico.html
@@ -1160,10 +1160,10 @@
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="/mantenimiento.html" class="text-white" style="text-decoration:none;">Empleo</a>
+                                <a href="/paginasFooter/empleo.html" class="text-white" style="text-decoration:none;">Empleo</a>
                             </li>
                             <li>
-                                <a href="/mantenimiento.html" class="text-white" style="text-decoration:none;">Inversión</a>
+                                <a href="/paginasFooter/inversion.html" class="text-white" style="text-decoration:none;">Inversión</a>
                             </li>
                         </ul>
                     </div>
@@ -1174,16 +1174,16 @@
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="/mantenimiento.html" class="text-white" style="text-decoration:none;">Preguntas Frecuentes</a>
+                                <a href="/paginasFooter/preguntasFrecuentes.html" class="text-white" style="text-decoration:none;">Preguntas Frecuentes</a>
                             </li>
                             <li>
-                                <a href="/mantenimiento.html" class="text-white" style="text-decoration:none;">Términos y condiciones</a>
+                                <a href="/paginasFooter/terminos.html" class="text-white" style="text-decoration:none;">Términos y condiciones</a>
                             </li>
                             <li>
-                                <a href="/mantenimiento.html" class="text-white" style="text-decoration:none;">Soporte</a>
+                                <a href="/paginasFooter/soporte.html" class="text-white" style="text-decoration:none;">Soporte</a>
                             </li>
                             <li>
-                                <a href="/mantenimiento.html" class="text-white" style="text-decoration:none;">Ventas Coorporativas</a>
+                                <a href="/paginasFooter/ventasCoorporativas.html" class="text-white" style="text-decoration:none;">Ventas Coorporativas</a>
                             </li>
                         </ul>
                     </div>
